[tool.poetry]
name = "pct-scanner-py"
version = "0.1.0"
description = "PCT Scanner AGPL Dual"
authors = ["Konrad Lanz <office@greev.com>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
